--- a/.github/workflows/cd-databricks.yaml
+++ b/.github/workflows/cd-databricks.yaml
@@ -7,9 +7,8 @@ on:
       - completed
 
 jobs:
-  cd:
+  deploy:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
-    
     runs-on: ubuntu-latest
 
     steps:
@@ -25,5 +24,5 @@ jobs:
           echo "DATABRICKS_HOST=${{ secrets.DATABRICKS_HOST }}" >> $GITHUB_ENV
           echo "DATABRICKS_TOKEN=${{ secrets.DATABRICKS_TOKEN }}" >> $GITHUB_ENV
 
-      - name: Deploy to Development
-        run: databricks bundle validate
+      - name: Deploy para dev
+        run: databricks bundle deploy --target dev
