--- a/.github/workflows/cd-databricks.yaml
+++ b/.github/workflows/cd-databricks.yaml
@@ -1,14 +1,14 @@
 name: Databricks CD
 
 on:
-  workflow_run:
-    workflows: ["Databricks CI"]
-    types:
-      - completed
+  pull_request:
+    branches:
+      - main
+    paths:
+      - nyc_taxis/**
 
 jobs:
-  deploy:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+  CD:
     runs-on: ubuntu-latest
 
     steps:
