--- a/.github/workflows/cd-databricks.yaml
+++ b/.github/workflows/cd-databricks.yaml
@@ -5,10 +5,10 @@ on:
     branches:
       - main
     paths:
-      - nyc_taxis/**
+      - src/**
 
 jobs:
-  CD:
+  cd:
     runs-on: ubuntu-latest
 
     steps:
